Vertical alignment fixed

--- a/css/base-styles.css
+++ b/css/base-styles.css
@@ -131,7 +131,7 @@ p {
   content: ' ';
   display: inline-block;
   height: 100%;
-  margin-left: -1px;
+  margin-left: -4px;
   vertical-align: middle;
   width: 0;
 }
